<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/primary_gradient_background"
    android:layout_margin="2dp"
    android:padding="4dp">

    <TextView
        android:id="@+id/textViewPlanDayHeader"
        android:text="@string/empty_date"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_size"
        android:background="@drawable/rounded_text_box"
        android:gravity="center"
        android:textSize="@dimen/header_text_size"
        android:layout_gravity="top"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_size"
        android:layout_marginTop="@dimen/divider_margin"
        android:background="@drawable/divider" />

    <include layout="@layout/content_plan_day" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_meal_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/fab_margin"
            android:backgroundTint="@color/colorAccentSecondary"
            android:contentDescription="@string/add_meal_to_plan_day"
            android:src="@drawable/ic_baseline_add_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_meal_to_plan_day"
            android:textSize="@dimen/add_button_text_size"
            android:layout_gravity="center" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_size"
        android:layout_marginTop="@dimen/divider_margin"
        android:background="@drawable/divider" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom|center">
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/done_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/fab_margin"
            android:backgroundTint="@color/colorAccent"
            android:contentDescription="@string/save_plan_day"
            android:src="@drawable/ic_baseline_done_24" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/dismiss_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/fab_margin"
            android:backgroundTint="@color/colorPrimaryDark"
            android:contentDescription="@string/dismiss_plan_day"
            android:src="@drawable/ic_baseline_dismiss_24" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</LinearLayout>